Height problem solved on IOS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,9 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh; /*Com o body tendo 100vh, as divs internas poderão se alinhar verticalmente no centro da página.*/
+    max-height: -webkit-fill-available;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     background-color: #c7cdd3;
 }
 
@@ -29,6 +32,7 @@ body{
     height: 40px;
     position: relative;
     transform-style: preserve-3d; /*Informando que as cartas são elementos 3d para que o backface-visibility funcione.*/
+    -webkit-transform-style: preserve-3d;
     transition: transform .5s; /*Anima o transform y quando flipar a carta.*/
 }
 
@@ -46,10 +50,12 @@ body{
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.45);
     backface-visibility: hidden; /* Todas as faces que tiverem invertidas (transform y 180deg) não serão mostradas para o usuário. Essa propriedade não possui nenhum efeito em transformações 2D.*/
+    -webkit-backface-visibility: hidden;
 }
 
 .flip{
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 .card-front{
